--- a/Style/index.html
+++ b/Style/index.html
@@ -86,14 +86,97 @@
     </header>
 
     <main>
+      <!-- hero -section -->
       <section class="hero-img h-96 flex items-center justify-center">
         <div class="w-11/12 mx-auto text-white space-y-5">
           <h1 class="font-bold text-3xl">Best Collection of you</h1>
           <p class="w-97">
-          Discover the latest trends in fashion, electronics, and more. Shop with confidence and style at SwiftCart
+            Discover the latest trends in fashion, electronics, and more. Shop
+            with confidence and style at SwiftCart
           </p>
 
           <button class="btn btn-primary">Shop now</button>
+        </div>
+      </section>
+
+      <!-- suport section -->
+      <section class="bg-gray-100">
+        <div class="w-11/12 mx-auto py-10">
+          <div class="text-center space-y-5">
+            <h1 class="text-3xl font-bold">Why chose us</h1>
+            <p>
+              We provide the best shopping experience with top-notch service
+            </p>
+          </div>
+
+          <section class="mt-15 flex justify-between items-center">
+            <!-- fast delivery -->
+            <div class="card w-70 relative bg-white p-5 space-y-5">
+              <div
+                class="absolute -top-5 bg-gray-100 p-3 rounded-lg border-3 border-white shadow-md"
+              >
+                <i
+                  class="fa-solid fa-truck text-2xl"
+                  style="color: rgba(255, 59, 101, 1)"
+                ></i>
+              </div>
+              <div class="mt-10 space-y-3">
+                <h2 class="font-semibold text-xl">Fast delevery</h2>
+                <p class="text-gray-400">
+                  Get your orders delivery to your dorstep quickly and
+                  effeciently
+                </p>
+              </div>
+            </div>
+
+            <!-- 24/7 support -->
+            <div class="card w-70 relative bg-white p-5 space-y-5">
+              <div
+                class="absolute -top-5 bg-gray-100 p-3 rounded-lg border-3 border-white shadow-md"
+              >
+                <i
+                  class="fa-solid fa-headphones text-xl"
+                  style="color: rgba(255, 59, 101, 1)"
+                ></i>
+              </div>
+              <div class="mt-10 space-y-3">
+                <h2 class="font-semibold text-xl">24/7 Support</h2>
+                <p class="text-gray-400">
+                  Our support team are available. Around clock to assist you.
+                </p>
+              </div>
+            </div>
+
+            <!-- Secure payment -->
+            <div class="card w-70 relative bg-white p-5 space-y-5">
+              <div
+                class="absolute -top-5 bg-gray-100 p-3 rounded-lg border-3 border-white shadow-md"
+              >
+               <i class="fa-solid fa-shield text-xl" style="color: rgba(255, 59, 101, 1.00);"></i>
+              </div>
+              <div class="mt-10 space-y-3">
+                <h2 class="font-semibold text-xl">Secure Payment</h2>
+                <p class="text-gray-400">
+                  Experience safe and secure transition with your incripted payment system
+                </p>
+              </div>
+            </div>
+
+            <!-- Easy returns -->
+            <div class="card w-70 relative bg-white p-5 space-y-5">
+              <div
+                class="absolute -top-5 bg-gray-100 p-3 rounded-lg border-3 border-white shadow-md"
+              >
+                <i class="fa-solid fa-arrows-rotate text-2xl" style="color: rgba(255, 59, 101, 1.00);"></i>
+              </div>
+              <div class="mt-10 space-y-3">
+                <h2 class="font-semibold text-xl">Easy Return</h2>
+                <p class="text-gray-400">
+                  No satisfied? Return your product within 30 days.
+                </p>
+              </div>
+            </div>
+          </section>
         </div>
       </section>
     </main>
