add to footer section

--- a/Style/index.html
+++ b/Style/index.html
@@ -190,6 +190,58 @@
 
     </main>
 
+      <footer class=" bg-gray-700 ">
+
+        <div class="flex justify-between border-b-2 border-white w-11/12 mx-auto p-10 text-white">
+
+          <nav class="space-y-2">
+            <h2 class="text-2xl font-bold">SwiftCart</h2>
+            <p>Your onestop shop for all your fashion and lifstyle need.</p><p> Quality products,fast delivery and excellent support</p>
+          </nav>
+ <nav class="flex flex-col">
+    <h6 class="footer-title">Quick Links</h6>
+    <a class="link link-hover">Home</a>
+    <a class="link link-hover">Producs</a>
+    <a class="link link-hover">About</a>
+    <a class="link link-hover">Contact</a>
+  </nav>
+  <nav class="flex flex-col">
+    <h6 class="footer-title">Support</h6>
+    <a class="link link-hover">Faq</a>
+    <a class="link link-hover">Shipping</a>
+    <a class="link link-hover">Returns</a>
+    <a class="link link-hover">Secure</a>
+  </nav>
+  <nav>
+    <h6 class="footer-title">Subscribe our newslater</h6>
+    <p>The latest news, article and resourses,</p><p>
+      sent to your inbox only
+    </p>
+    <div class="mt-5">
+      <input class="bg-white rounded-sm text-black py-2 pl-2" type="email" placeholder="Enter your email">
+      <button class="btn btn-primary py-2 rounded-sm">Subscribe</button>
+    </div>
+  </nav>
+        </div>
+
+        <div class="w-11/12 mx-auto flex justify-between text-white py-10">
+           <aside>
+    <p>Copyright © {new Date().getFullYear()} - All right reserved by ACME Industries Ltd</p>
+  </aside>
+
+  <div class="text-2xl">
+    <i class="fa-brands fa-facebook-f" style="color: rgba(255, 255, 255, 1.00);"></i>
+    <i class="fa-brands fa-instagram" style="color: rgba(255, 255, 255, 1.00);"></i>
+    <i class="fa-solid fa-envelope" style="color: rgba(255, 255, 255, 1.00);"></i>
+    <i class="fa-brands fa-twitter" style="color: rgba(255, 255, 255, 1.00);"></i>
+    <i class="fa-brands fa-linkedin-in" style="color: rgba(255, 255, 255, 1.00);"></i>
+  </div>
+        </div>
+ 
+</footer>
+
+
+
     <script src="script.js"></script>
   </body>
 </html>
